--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
     <div style="font-size:40px">🌿</div>
     <h1>Загрузка… Loading…</h1>
     <p><a href="nataliahelp.html">Русская версия</a> · <a href="nataliahelp-en.html">English</a></p>
-  </div>
+  </div><section id="stats" style="text-align:center; margin: 40px 0;">
+  <h2>💛 Статистика проекта</h2>
+  <p>Количество участников: <span id="participants">0</span></p>
+  <p>Собрано всего: <span id="total">0</span> €</p>
+</section>
+
+<script>
+  // 👉 Временные данные (пока без базы)
+  // Когда будет база — эти цифры можно будет брать автоматически
+  let participants = 48;   // ← сюда поставь актуальное число участников
+  let total = participants * 10; // например, если каждый внёс 10 евро
+
+  // Отображаем данные на сайте
+  document.getElementById("participants").textContent = participants;
+  document.getElementById("total").textContent = total.toFixed(2);
+</script><!-- Счётчик посещений -->
+<div style="text-align:center; margin-top:40px; font-size:14px; color:#555;">
+  👣 Посетителей сайта: 
+  <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://panina19771977-cpu.github.io/&count_bg=%2378C850&title_bg=%23555555&icon=leaf.svg&icon_color=%23FFFFFF&title=Посещения&edge_flat=false"/>
+</div>
 </body>
 </html>
