--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ function animate(id, value) {
   const el = document.getElementById(id);
   if (!el) return;
   let count = 0;
-  const step = value / 60;
+  const step = value /; 60;
   const interval = setInterval(() => {
     count += step;
     if (count >= value) {
