--- a/nataliahelp-en.html
+++ b/nataliahelp-en.html
@@ -264,7 +264,9 @@ footer{padding:26px 18px 60px; text-align:center; color:#2b6666}
   <p style="font-size:1.1rem;">💶 Total Raised: <span id="total" style="font-weight:bold;color:#22b389;">0</span> €</p>
   <div style="margin-top:10px;">
     👁️ Site Visitors:
-    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fnataliahelp.netlify.app&count_bg=%2322B389&title_bg=%23043D3D&icon=leaf.svg&icon_color=%23FFFFFF&title=Views&edge_flat=false" alt="Views" />
+  
+👁️ Visitors:
+<img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fpanina19771977-cpu.github.io%2F&count_bg=%2322B389&title_bg=%23043D3D&icon=leaf.svg&icon_color=%23FFFFFF&title=Visitors&edge_flat=false" alt="Visitors" />
   </div>
 </section>
 
