--- a/index.html
+++ b/index.html
@@ -3,70 +3,208 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>NHP — loading…</title>
-  <link rel="icon" href="nhp-favicon-512.png" type="image/png" />
+  <title>Natalia Help Project — NHP | Вместе мы сильнее 🌿</title>
+  <meta name="description" content="Natalia Help Project — проект взаимопомощи. Внеси немного сегодня — получи поддержку завтра. Честные правила, прозрачная очередь, PayPal и Revolut." />
+  <link rel="icon" href="nhp-favicon-180.png" type="image/png" />
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;display:flex;align-items:center;justify-content:center;height:100vh;margin:0;background:#f3fbf8;color:#043d3d}
-    .box{max-width:520px;text-align:center;padding:24px;border-radius:16px;background:#fff;box-shadow:0 8px 24px rgba(0,0,0,.08)}
+    :root {
+      --mint: #22b389;
+      --leaf: #199672;
+      --text: #043d3d;
+      --card: #fff;
+    }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: #f3fbf8;
+      color: var(--text);
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background: var(--leaf);
+      color: white;
+      padding: 15px;
+      font-size: 1.4rem;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      text-shadow: 0 1px 2px rgba(0,0,0,.2);
+    }
+    .card {
+      background: var(--card);
+      margin: 20px auto;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+      max-width: 700px;
+    }
+    button, a.btn {
+      background: var(--mint);
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background 0.3s;
+      display: inline-block;
+      margin: 5px;
+    }
+    button:hover, a.btn:hover {
+      background: var(--leaf);
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: #555;
+      padding-bottom: 40px;
+    }
+    .lang-toggle {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      background: #fff;
+      border: 1px solid #cceee0;
+      color: var(--leaf);
+      font-weight: 700;
+      border-radius: 8px;
+      padding: 6px 12px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,.1);
+    }
   </style>
-  <script>
-    (function(){
-      try{
-        var lang=(navigator.language||'').toLowerCase();
-        if(lang.startsWith('en')) location.replace('nataliahelp-en.html');
-        else location.replace('nataliahelp.html');
-      }catch(e){ location.href='nataliahelp.html'; }
-    })();
-  </script> 
 </head>
+
 <body>
-  <div class="box">
-    <div style="font-size:40px">🌿</div>
-    <h1>Загрузка… Loading…</h1>
-    <p><a href="nataliahelp.html">Русская версия</a> · <a href="nataliahelp-en.html">English</a></p>
-  </div>
-  
-  <section style="text-align:center;margin:40px auto;padding:20px;max-width:700px;background:#fff;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,.05);">
-    <h2 style="color:#199672;margin-bottom:12px;">📊 Статистика проекта NHP</h2>
-    <p style="font-size:1.1rem;">💚 Участников: <span id="participants" style="font-weight:bold;color:#22b389;">0</span></p>
-    <p style="font-size:1.1rem;">💶 Общий вклад: <span id="total" style="font-weight:bold;color:#22b389;">0</span> €</p>
-    <div style="margin-top:10px;">
-      👁️ Посетителей сайта:
-      <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fnataliahelp.netlify.app&count_bg=%2322B389&title_bg=%23043D3D&icon=leaf.svg&icon_color=%23FFFFFF&title=Просмотры&edge_flat=false" alt="Просмотры" />
-    </div>
-  </section>
+  <button class="lang-toggle" id="langToggle">EN</button>
+  <header>🌿 Natalia Help Project — NHP</header>
+
+  <main>
+    <section class="card" id="intro">
+      <h2 id="intro-title">Добро пожаловать!</h2>
+      <p id="intro-text">
+        Я создала этот проект, потому что, как и многие, не получила наследства и всё в жизни строю сама.
+        Работаю с 16 лет, но накопить на жильё и стабильность — трудно.  
+        Natalia Help Project — это честный проект взаимопомощи, где каждый может внести немного сегодня и
+        получить поддержку завтра. Всё прозрачно, с уважением и доверием.
+      </p>
+    </section>
+
+    <section class="card">
+      <h2 id="title-support">💚 Поддержи проект</h2>
+      <p id="desc-support">Каждый вклад помогает нашему сообществу взаимопомощи становиться сильнее.</p>
+      <a class="btn" id="btn-paypal" href="https://paypal.me/NataliaDomkina" target="_blank" rel="noopener">💸 Поддержать через PayPal</a>
+      <a class="btn" id="btn-revolut" href="https://revolut.me/n_domkina" target="_blank" rel="noopener">💶 Поддержать через Revolut</a>
+    </section>
+
+    <section class="card">
+      <h2 id="title-stats">📊 Статистика проекта</h2>
+      <p>💚 <span id="label-participants">Участников</span>: <span id="participants">0</span></p>
+      <p>💶 <span id="label-total">Общий вклад</span>: <span id="total">0</span> €</p>
+      <p>👁️ <span id="label-views">Посетителей сайта</span>:</p>
+      <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fnataliahelp.netlify.app&count_bg=%2322B389&title_bg=%23043D3D&icon=leaf.svg&icon_color=%23FFFFFF&title=Просмотры&edge_flat=false" alt="Просмотры">
+    </section>
+
+    <section class="card">
+      <h2 id="title-share">📢 Поделись с друзьями</h2>
+      <p id="desc-share">Расскажи о проекте Natalia Help и помоги другим присоединиться 💚</p>
+      <button onclick="shareProject()" id="btn-share">🔗 Поделиться проектом</button>
+    </section>
+  </main>
+
+  <footer id="footer">
+    © 2025 Natalia Help Project — NHP | Вместе сильнее 🌿
+  </footer>
 
   <script>
-    // --- Временные данные
-    const participants = 48; // поставь реальное количество участников
-    const total = participants * 10; // например, если каждый внёс по 10 €
+    // Данные
+    const participants = 48;
+    const total = participants * 10;
 
-    // --- Анимация плавного счёта
-    function animate(id, value) {
-      const el = document.getElementById(id);
-      if (!el) return;
-      let count = 0;
-      const step = value / 60; // Исправлено: убрана точка с запятой
-      const interval = setInterval(() => {
-        count += step;
-        if (count >= value) {
-          count = value;
-          clearInterval(interval);
-        }
-        el.textContent = Math.floor(count);
-      }, 20);
+    // Статистика
+    document.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("participants").textContent = participants;
+      document.getElementById("total").textContent = total;
+    });
+
+    // Поделиться
+    function shareProject() {
+      const url = "https://nataliahelp.netlify.app";
+      const text = currentLang === "ru"
+        ? "💚 Присоединяйся к Natalia Help Project — вместе мы сильнее!"
+        : "💚 Join the Natalia Help Project — together we are stronger!";
+      if (navigator.share) {
+        navigator.share({ title: "Natalia Help Project", text, url });
+      } else {
+        alert((currentLang === "ru" ? "Скопируй ссылку: " : "Copy the link: ") + url);
+      }
     }
 
-    // --- Запуск, когда страница загружена
-    document.addEventListener("DOMContentLoaded", () => {
-      animate("participants", participants);
-      animate("total", total);
-    });
-  </script>
+    // Языки
+    let currentLang = navigator.language.startsWith("en") ? "en" : "ru";
+    const langToggle = document.getElementById("langToggle");
 
-  <div style="text-align:center; margin-top:40px; font-size:14px; color:#555;">
-    👣 Посетителей сайта: 
-    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://panina19771977-cpu.github.io/&count_bg=%2378C850&title_bg=%23555555&icon=leaf.svg&icon_color=%23FFFFFF&title=Посещения&edge_flat=false" alt="Посещения"/>
-  </div>
+    const texts = {
+      ru: {
+        introTitle: "Добро пожаловать!",
+        introText: "Я создала этот проект, потому что, как и многие, не получила наследства и всё в жизни строю сама. Работаю с 16 лет, но накопить на жильё и стабильность — трудно. Natalia Help Project — это честный проект взаимопомощи, где каждый может внести немного сегодня и получить поддержку завтра. Всё прозрачно, с уважением и доверием.",
+        support: "💚 Поддержи проект",
+        desc: "Каждый вклад помогает нашему сообществу взаимопомощи становиться сильнее.",
+        paypal: "💸 Поддержать через PayPal",
+        revolut: "💶 Поддержать через Revolut",
+        stats: "📊 Статистика проекта",
+        participants: "Участников",
+        total: "Общий вклад",
+        views: "Посетителей сайта",
+        share: "📢 Поделись с друзьями",
+        descShare: "Расскажи о проекте Natalia Help и помоги другим присоединиться 💚",
+        btnShare: "🔗 Поделиться проектом",
+        footer: "© 2025 Natalia Help Project — NHP | Вместе сильнее 🌿",
+      },
+      en: {
+        introTitle: "Welcome!",
+        introText: "I created this project because, like many others, I didn’t inherit anything and build everything on my own. I’ve been working since I was 16, but saving for housing and stability is hard. Natalia Help Project is an honest mutual aid community — everyone can give a little today and receive support tomorrow. Transparent, fair, and kind.",
+        support: "💚 Support the Project",
+        desc: "Every contribution helps our mutual aid community grow stronger.",
+        paypal: "💸 Support via PayPal",
+        revolut: "💶 Support via Revolut",
+        stats: "📊 Project Statistics",
+        participants: "Participants",
+        total: "Total Contribution",
+        views: "Visitors",
+        share: "📢 Share with Friends",
+        descShare: "Tell others about Natalia Help and help them join 💚",
+        btnShare: "🔗 Share Project",
+        footer: "© 2025 Natalia Help Project — Together we are stronger 🌿",
+      }
+    };
+
+    function updateLanguage(lang) {
+      const t = texts[lang];
+      document.getElementById("intro-title").textContent = t.introTitle;
+      document.getElementById("intro-text").textContent = t.introText;
+      document.getElementById("title-support").textContent = t.support;
+      document.getElementById("desc-support").textContent = t.desc;
+      document.getElementById("btn-paypal").textContent = t.paypal;
+      document.getElementById("btn-revolut").textContent = t.revolut;
+      document.getElementById("title-stats").textContent = t.stats;
+      document.getElementById("label-participants").textContent = t.participants;
+      document.getElementById("label-total").textContent = t.total;
+      document.getElementById("label-views").textContent = t.views;
+      document.getElementById("title-share").textContent = t.share;
+      document.getElementById("desc-share").textContent = t.descShare;
+      document.getElementById("btn-share").textContent = t.btnShare;
+      document.getElementById("footer").textContent = t.footer;
+      langToggle.textContent = lang === "ru" ? "EN" : "RU";
+    }
+
+    langToggle.addEventListener("click", () => {
+      currentLang = currentLang === "ru" ? "en" : "ru";
+      updateLanguage(currentLang);
+    });
+
+    updateLanguage(currentLang);
+  </script>
 </body>
 </html>
