Final site update by Natalia Domkina

--- a/faq.html
+++ b/faq.html
@@ -1,51 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FAQ — Natalia Help</title>
+  <title>Natalia Help Project — FAQ | Вместе мы сильнее 🌿</title>
+  <meta name="description" content="FAQ проекта Natalia Help Project — честная взаимопомощь, основанная на доверии и прозрачности. Автор: Natalia Domkina.">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="180x180" href="nhp-favicon-180.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="nhp-favicon-512.png">
 </head>
 <body>
-<header class="hero">
-  <div class="container">
-    <nav>
-      <a class="brand" href="index.html"><span class="logo">🌿</span><b>Natalia Help</b></a>
-      <div class="links">
-        <a href="about.html">О проекте</a>
-        <a href="faq.html">FAQ</a>
-        <a href="apply.html" class="cta">Стать участником</a>
-      </div>
+  <header class="topbar">
+    <div class="logo">🌿 Natalia Help Project — NHP</div>
+    <nav class="main-nav">
+      <a href="index.html">Главная</a>
+      <a href="faq.html" class="lang-link">RU 🇷🇺</a>
+      <a href="faq-en.html" class="lang-link">EN 🇬🇧</a>
     </nav>
-    <h1>FAQ</h1>
-    <p>Отвечаем просто и честно на самые частые вопросы.</p>
-  </div>
-</header>
-<main class="container">
-  <section class="grid">
-    <div class="card">
-      <h3>Это пирамида?</h3>
-      <p>Нет. Выплаты происходят из общего фонда взносов по очереди и алгоритму. Новые участники не требуются для выполнения обязательств.</p>
-    </div>
-    <div class="card">
-      <h3>Если я перестану платить?</h3>
-      <p>Можно выйти из проекта. Возвращается часть накопленного (например, 70%). При самовольном прекращении без уведомления право на выплату теряется.</p>
-    </div>
-    <div class="card">
-      <h3>Как узнать дату моей выплаты?</h3>
-      <p>В личном кабинете будет виден номер в очереди, сколько людей впереди, прогноз месяцев (по формуле) и история платежей.</p>
-    </div>
-    <div class="card">
-      <h3>Можно быстрее?</h3>
-      <p>Да: бонусные розыгрыши, реферальные бонусы, больший тариф (например, 150–200 €/мес).</p>
-    </div>
-    <div class="card">
-      <h3>Комиссии?</h3>
-      <p>Небольшая фиксированная комиссия на обслуживание платформы. Полная отчётность публикуется ежемесячно.</p>
-    </div>
-  </section>
-</main>
-<footer><div class="container">© 2025 Natalia Help</div></footer>
-<script src="script.js"></script>
+  </header>
+
+  <main>
+    <section class="section card">
+      <h1>FAQ — Честные ответы</h1>
+      <p class="section-intro">Ответы на самые частые вопросы участников и гостей проекта <strong>Natalia Help Project</strong> 🌿</p>
+
+      <details class="faq-item" open>
+        <summary>Почему я создала этот проект?</summary>
+        <p>Я начала работать в 16 лет. У меня не было наследства и своего жилья. Я знаю, каково это — трудиться всю жизнь и всё равно бороться за стабильность. Таких, как я, миллионы. Этот проект создан не для жалости, а для поддержки и надежды. Чтобы каждый мог вдохнуть спокойнее и почувствовать, что он не один. 💚</p>
+      </details>
+
+      <details class="faq-item">
+        <summary>Это благотворительность или попрошайничество?</summary>
+        <p>Это взаимопомощь. Здесь никто не просит — все участвуют. Мы вместе создаём честный круг доверия: сегодня помогаешь ты, завтра помогают тебе. Без посредников, без “чудес”, с уважением и прозрачностью. 🌿</p>
+      </details>
+
+      <details class="faq-item">
+        <summary>Куда идут деньги?</summary>
+        <p>Все средства идут в общую кассу проекта. Каждый месяц часть средств распределяется по очереди, а часть резервируется для устойчивости. Всё фиксируется и публикуется для участников.</p>
+      </details>
+
+      <details class="faq-item">
+        <summary>Можно ли участвовать анонимно?</summary>
+        <p>Да. Истории публикуются только с согласия участников. Всё добровольно и честно. Мы уважаем личное пространство каждого.</p>
+      </details>
+
+      <details class="faq-item">
+        <summary>Почему важна прозрачность?</summary>
+        <p>Потому что доверие — основа проекта. Каждый участник должен понимать, куда идёт каждый евро. Прозрачность = уверенность, что всё работает по-честному.</p>
+      </details>
+
+      <details class="faq-item">
+        <summary>Как я могу помочь, если не участвую?</summary>
+        <p>Можно просто рассказать о проекте друзьям, поделиться ссылкой, внести 1 €, написать вдохновляющее сообщение. Даже маленький шаг может стать большой поддержкой для кого-то. 💫</p>
+      </details>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>© 2025 Natalia Domkina — Natalia Help Project — NHP | Вместе мы сильнее 🌿</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
