--- a/404.html
+++ b/404.html
@@ -1,7 +1,27 @@
-<!doctype html><meta charset="utf-8">
-<title>Страница не найдена — Natalia Help</title>
-<link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>404 — Страница не найдена | Natalia Help Project 🌿</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="nhp-favicon-180.png">
+</head>
 <body>
-<header class="hero"><div class="container"><h1>404 — страница не найдена</h1><a class="cta" href="index.html">На главную</a></div></header>
-<footer><div class="container">© 2025 Natalia Help</div></footer>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Упс... страница не найдена 💚</h1>
+      <p>Похоже, вы попали не туда.  
+      Но добрые дела всегда находят свой путь 🌿</p>
+      <div class="hero-buttons">
+        <a href="index.html" class="btn primary">Вернуться на главную</a>
+        <a href="nataliahelp-en.html" class="btn ghost">Go to English version</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 Natalia Domkina — Natalia Help Project — NHP</p>
+  </footer>
 </body>
+</html>
