--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
     <p>💚 Поддержать: <a href="https://paypal.me/NataliaDomkina" target="_blank" rel="noreferrer">PayPal</a> · <a href="https://revolut.me/n_domkina" target="_blank" rel="noreferrer">Revolut</a></p>
     <p>© 2025 Natalia Domkina — Natalia Help Project — NHP | Вместе мы сильнее 🌿</p>
   </footer>
-
+<p>
+  💬 <a href="https://t.me/NHP_Natalia" target="_blank">Связаться в Telegram</a>
+</p>
   <!-- Scripts -->
   <script src="script.js"></script>
 </body>
