--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
           <a class="btn primary" href="#apply">Подать заявку 💌</a>
           <a class="btn ghost" href="#support">Поддержать проект 💚</a>
         </div>
-        <div class="stats">
-          <div class="stat"><span id="participants">0</span><small>участников</small></div>
-          <div class="stat"><span id="fund">0</span> €<small>в общей кассе</small></div>
-          <div class="stat"><span>100% онлайн</span><small>прозрачно</small></div>
-        </div>
-      </div>
-    </section>
+    <section class="new-start">
+  <h3>🌱 Проект только начинается</h3>
+  <p>Мы запускаем Natalia Help Project — честное пространство взаимопомощи. 
+     Сейчас это старт — и именно ты можешь стать одним из первых участников, 
+     кто заложит основу доброго фонда. Всё прозрачно и по-человечески.</p>
+  <div class="start-buttons">
+    <a href="#apply" class="button">Подать заявку</a>
+    <a href="#support" class="button-outline">Поддержать проект</a>
+  </div>
+</section>
 
     <!-- How it works -->
     <section id="how" class="section card">
