--- a/nataliahelp-en.html
+++ b/nataliahelp-en.html
@@ -46,13 +46,16 @@
           <a class="btn primary" href="#apply">Apply for help 💌</a>
           <a class="btn ghost" href="#support">Support project 💚</a>
         </div>
-        <div class="stats">
-          <div class="stat"><span id="participants">0</span><small>participants</small></div>
-          <div class="stat"><span id="fund">0</span> €<small>in total fund</small></div>
-          <div class="stat"><span>100% online</span><small>transparency</small></div>
-        </div>
-      </div>
-    </section>
+      <section class="new-start">
+  <h3>🌱 The Project is Just Starting</h3>
+  <p>We’re launching the Natalia Help Project — a transparent and human-centered
+     space for mutual aid. Be among the first to join and shape the foundation
+     of this honest community.</p>
+  <div class="start-buttons">
+    <a href="#apply" class="button">Apply for Help</a>
+    <a href="#support" class="button-outline">Support the Project</a>
+  </div>
+</section>
 
     <!-- How it works -->
     <section id="how" class="section card">
