--- a/about.html
+++ b/about.html
@@ -69,6 +69,32 @@
       Наш сайт: <a href="https://nataliahelp.netlify.app">nataliahelp.netlify.app</a>
     </p>
 
+<!-- 🔽 Начало блока политики -->
+<section class="policy" style="margin-top:25px; padding:20px; background:#f6fff9; border:1px solid #d4f0df; border-radius:10px;">
+  <h2 style="color:#2a8a5a;">🌱 Политика пожертвований и взаимопомощи</h2>
+  <p><strong>Natalia Help Project (NHP)</strong> — это инициатива взаимопомощи, созданная для того, чтобы люди могли поддерживать друг друга в достижении жизненных целей. Все переводы участников являются <strong>добровольными пожертвованиями</strong>.</p>
+
+  <h3>💞 Принципы работы</h3>
+  <ul>
+    <li>Добровольные взносы через PayPal или Revolut.</li>
+    <li>Средства распределяются между участниками <strong>по очереди</strong>.</li>
+    <li>Небольшая часть средств идёт на развитие сайта и техническое обслуживание.</li>
+    <li>Вся статистика и распределения открыты и прозрачны.</li>
+  </ul>
+
+  <h3>💬 Добровольность и ответственность</h3>
+  <p>Все взносы совершаются добровольно, без обещаний прибыли или возврата средств. Проект — акт доверия и взаимопомощи, а не инвестиция.</p>
+
+  <h3>🔒 Безопасность и конфиденциальность</h3>
+  <p>Платежи проходят через защищённые системы PayPal и Revolut. Данные участников не передаются третьим лицам и защищены по стандартам GDPR.</p>
+
+  <h3>📊 Прозрачность и отчётность</h3>
+  <p>Проект публикует общие данные о собранных и распределённых средствах, показывая, кому уже оказана помощь.</p>
+
+  <h3>⚖️ Юридическое уведомление</h3>
+  <p>Natalia Help Project действует как неприбыльная инициатива. Все переводы рассматриваются как безвозмездные пожертвования. Проект не предоставляет финансовых услуг и не требует лицензии в Венгрии и ЕС.</p>
+</section>
+<!-- 🔼 Конец блока политики -->
     <a href="index.html" class="btn">🏠 На главную</a>
     <a href="apply.html" class="btn">💌 Подать заявку</a>
 
